Fix input text cut off along bottom in Firefox

--- a/awx/ui/client/legacy-styles/forms.less
+++ b/awx/ui/client/legacy-styles/forms.less
@@ -206,6 +206,7 @@
        border-color: @b7grey;
        border-radius: 5px;
        height: 30px;
+       padding: 0 10px;
     }
 }
 
